# Fastapi-auth

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/dependencies/: authentication.py  database.py
app/api/routes/: __init__.py  authentication.py  users.py
app/core/: __init__.py  config.py  events.py
app/core/settings/: app.py  base.py  development.py
app/db/: __init__.py  erros.py  events.py  functions.py
app/db/migrations/: env.py
app/db/migrations/versions/: 9a13dd19e4c4_update_trigger.py  a2b12d156a2c_users_tables.py  f70f826b437e_first_migration.py
app/db/queries/: queries.pyi
app/db/queries/sql/: users.sql
app/db/repositories/: base.py  users.py
app/db/tables/: user.py
app/models/: commons.py
app/models/domain/: users.py
app/models/schemas/: users.py
app/resources/: string.py
app/services/: __init__.py  authentication.py  jwt.py  security.py
insomnia/: Insomnia-All_2022-05-05.json
