[tool.poetry]
name = "fastapi_authentication"
version = "0.1.0"
description = ""
authors = ["helter daniel <helterdaniel@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.7.7"
uvicorn = "^0.17.6"
fastapi = "^0.75.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
psycopg2-binary = "^2.9.3"
databases = {extras = ["postgresql"], version = "^0.5.5"}
aiosql = "^3.4.1"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
